# clogstats

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
clogstats/: cli.py  gather_stats.py  parse.py  plot.py  time_series.py
clogstats/forecasting/: arima.py  holt_winters.py  peak_detection.py  ts_utils.py
clogstats/stats/: gather_stats.py  parse.py  time_series.py
tests/: conftest.py  test_gather_stats.py  test_time_series.py
tests/sample_logs/: irc.freenode.#firefox.weechatlog  irc.freenode.#gitlab.weechatlog  irc.freenode.#go-nuts.weechatlog  irc.freenode.#go-nuts_big.weechatlog  irc.freenode.#minetest.weechatlog  irc.freenode.#node.js.weechatlog  irc.freenode.#node.js_big.weechatlog
weestats/: cli.py  gather_stats.py  parse.py
