[tool.poetry]
name = "clogstats"
version = "0.1.0"
description = "Gather statistics from WeeChat log files"
readme = "README.md"
authors = ["Rohan Kumar <seirdy@protonmail.com>"]
homepage = "https://git.sr.ht/~seirdy/clogstats"
repository = "https://git.sr.ht/~seirdy/clogstats"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = ">=0.25.3, <2.0.0"
dataclasses = {version = "^0.7", python = ">=3.6.1, <3.7"} # backport for python 3.6

[tool.poetry.scripts]
clogstats = "clogstats.cli:main"

[tool.poetry.dev-dependencies]
# formatters
black = "^19.10b0"
isort = {extras = ["pyproject"], version = "^4.3.21"}
# linters
flakehell = "^0.5.0"  # nice output for pylint + flake8, configured in pyproject.toml
flake8-isort = "^3.0.0"
pep8-naming = "^0.11.1"
flake8-docstrings = "^1.5.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.2.0"
safety = "^1.9.0"
pylint = "^2.5.3"
mypy = "^0.780"
pre-commit = "^2.5.1"  # run all formatting/linting/tests before each commit
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
coverage = {extras = ["toml"], version = "^5.1"}

[tool.pylint.format]
max-line-length = "88"

[tool.flakehell]
format = "grouped"
max_line_length = 88
max_complexity = 6
show_source = false
exclude = ["build", "dist", "*.egg-info", ".git", "ignore", ".cache", ".mypy_cache"]

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
flake8-docstrings = ["-D100", "-D104", "-D401"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E501", "-W503"]
pyflakes = ["+*"]
pylint = ["+*", "-C0330", "-C0326"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]
pylint = ["-C0116"]

[tool.isort]
exclude = ["build", "dist", "*.egg-info", ".git", "ignore", ".cache", ".mypy_cache"]
line_length = 88
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true

known_first_party = "clogstats"
known_third_party = [
	"pandas",
	"pytest",
]
known_standard_library = "dataclasses"  # use backport on py36, stdlib otherwise

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.coverage.run]
# omit = ["build", "dist", "*.egg-info", ".git", "ignore", ".cache", ".mypy_cache"]
include = ["clogstats/*"]
concurrency = ["multiprocessing"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
